[workspace]
resolver = "2"
members = [
    "lnx", "lnx-common",
    "lnx-server", "lnx-shell",
]

[profile.release]
lto = "fat"
codegen-units = 1

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"

clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
mimalloc = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
poem = { version = "3.1", features = ["anyhow"] }
poem-openapi = { version = "5.1", features = ["redoc", "url", "humantime"] }
url = { version = "2.5", features = ["serde"] }
