[workspace]
resolver = "2"
members = [
    "lnx",
    "lnx-common",
    "lnx-fs",
    "lnx-query",
    "lnx-server",
    "lnx-shell",
]

[profile.release]
lto = "fat"
codegen-units = 1

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
serde_json = "1"
serde_derive = "1"
serde = "1"
glommio = "0.9.0"
ulid = "1.1.3"
flume = "0.11.1"
bon = "3.0.0"
futures-util = "0.3.31"
bytes = "1.8.0"
fnv = "1"
ahash = "0.8.11"

# Dev Dependencies
rstest = "0.23.0"
tempfile = "3.14.0"

moka = { version = "0.12.8", features = ["sync"] }
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
mimalloc = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
poem = { version = "3.1", features = ["anyhow"] }
poem-openapi = { version = "5.1", features = ["redoc", "url", "humantime"] }
url = { version = "2.5", features = ["serde"] }
sqlparser = { version = "0.52.0", features = ["sqlparser_derive"] }
tantivy = { version = "0.22.0", default-features = false, features = ["zstd", "mmap"] }
sqlx = { version = "0.8.2", default-features = false, features = ["sqlite", "macros", "runtime-tokio"] }
opendal = { version = "0.50.2", default-features = false }

