[package]
name = "lnx-fs"
version = "0.1.0"
edition = "2021"
description = "A virtualized file system for writing small blobs efficiently."


[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
glommio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
tracing = { workspace = true }
moka = { workspace = true }
flume = { workspace = true }
bon = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
fnv = { workspace = true }
ahash = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }