[package]
name = "lnx-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
poem = { workspace = true }
poem-openapi = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }

lnx-common = { path = "../lnx-common" }
lnx-query = { path = "../lnx-query" }