[package]
name = "lnx"
version = "0.10.0"
edition = "2021"
authors = ["Harrison Burt"]
homepage = "https://lnxsearch.com"

[dependencies]
anyhow = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
mimalloc = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }

lnx-server = { path = "../lnx-server" }
lnx-shell = { path = "../lnx-shell" }