[package]
name = "lnx-build-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
rmp-serde = "1.3.0"

rend = { version = "0.5.2", features = ["bytemuck-1"] }
rkyv = { version = "0.8.8", features = ["little_endian", "pointer_width_32"] }

[workspace]