[package]
name = "lnx-build-core"
version = "0.1.0"
edition = "2021"
description = "The core vendored build dependencies for compilation targets"

[dependencies]
serde = { workspace = true }
serde_derive = { workspace = true }
rmp-serde = { workspace = true }
rkyv = { workspace = true }
rend = { workspace = true  }

lnx-ffi = { path = "../lnx-ffi" }
